# VSCodePiloter

./: .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PILLARS.md  README.md  SETUP.md  debug_windows_mcp.py  discover_mcp_tools.py  pyproject.toml  pytest.ini  state_tool_sample.txt  test_monitor_live.py  test_state_parser.py  test_windows_mcp.py
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: agent-bitwarden.yml  agent-run.yml  ci.yml
agent/: config.py  langgraph_app.py  llm_client.py  main.py  observability.py  state_store.py
agent/adapters/: base.py  claude_config.py  fallback_adapter.py  mcp_adapter.py  stdio_mcp_adapter.py
agent/diagnostics/: __init__.py  monitor_summary.py
agent/mcp/: client.py
agent/nodes/: act_step.py  persist.py  reason_step.py  recovery.py  scan_repos.py  sync_plan.py  validate_evidence.py
agent/prompts/: __init__.py  actor_system.txt  reasoner_system.txt
agent/scripts/: run_watchdog.py
agent/tools/: gh_ops.py  git_ops.py  vscode_copilot_monitor.py  vscode_copilot_monitor_debug.py
config/: config.yaml
diagnostics/: PATH_DIAGNOSTIC_REPORT.md  path_backup_2025-11-18_002437.txt  path_backup_before_cleanup_2025-11-18_010238.txt
docs/: SECRET_MANAGEMENT.md  STRATEGIC_ALIGNMENT_REVIEW.md  api_validation_results.md  performance.md  testing.md
docs/architecture-decisions/: 001-remove-custom-mcp-server.md
docs/plans/: Sprint1.md  Sprint2.md
mcp_server/: __init__.py  server.py
plans/: plan.yaml
scripts/: cleanup_path.ps1  diagnose_path_issue.ps1  discover_zai_models.sh  get_api_key.ps1  get_api_key.sh  monitor_path_changes.ps1  monitor_report.py  test_glm45v.sh  test_glm45v_endpoint.ps1  test_zai_endpoint.ps1  test_zai_endpoint.sh
tests/: __init__.py  conftest.py  test_llm_client.py  test_monitor_summary.py  test_sanity.py  test_secret_providers.py  test_vscode_monitor.py
tests/benchmarks/: __init__.py  test_performance.py
tests/fixtures/: mock_repos.json
tests/integration/: __init__.py  conftest.py  test_reasoner_with_llm.py  test_vscode_integration.py
