
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-vscode-multiagent"
version = "0.1.0"
description = "LangGraph-based Reasoner + Vision Actor that manages multiple VS Code windows on Windows 11 using pluggable MCP adapters."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Your Team"}]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.2.3",
    "requests>=2.32.0",
    "rich>=13.7.0",
    "colorama>=0.4.6",
    "psutil>=5.9.8",
    "python-dotenv>=1.0.1",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "pyperclip>=1.8.2",
    "Pillow>=10.2.0",
    "mcp>=1.21.0"
]

[project.optional-dependencies]
# Optional: basic local automation fallback (not default). Avoid if you only want MCP-based control.
fallback = [
    "pyautogui>=0.9.54"
]

dev = [
    "pytest>=8.2.0",
    "pytest-xdist>=3.6.1",
    "pytest-timeout>=2.3.1",
    "pytest-rerunfailures>=14.0",
    "coverage[toml]>=7.5.3",
    "ruff>=0.6.5",
    "pre-commit>=3.7.1"
]

[project.scripts]
agent-cli = "agent.main:cli"
agent-watchdog = "agent.scripts.run_watchdog:main"
 

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP"  # pyupgrade
]
ignore = [
]

[tool.coverage.run]
branch = true
source = ["agent"]
omit = [
    "tests/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

